charts/all/todo-extdb/templates/todo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: todo-extdb
  name: todo-extdb
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  internalTrafficPolicy: Cluster
  selector:
    name: todo-extdb
  sessionAffinity: None
  type: ClusterIP
