charts/all/todo-extdb/templates/todo-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    name: todo-extdb
  name: todo-extdb
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: todo-extdb
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
